--- a/src/app/pages/inicio/inicio.component.html
+++ b/src/app/pages/inicio/inicio.component.html
@@ -1,8 +1,9 @@
 <div class="inicio-container">
   <video class="background-video" autoplay loop playsinline muted>
-    <source src="assets/video_inicio.mp4" type="video/mp4">
-    Tu navegador no soporta la reproducción de video.
+    <source src="assets/VIDEO_INICIO.mp4" type="video/mp4">
+    Tu navegador no soporta la reproducción de video. Por favor, actualiza tu navegador.
   </video>
+
   <div class="title">
     <h1>GeoPortal San Juan de Lurigancho</h1>
     <p>Sistema de Información Geográfica para el Distrito de San Juan de Lurigancho</p>
@@ -11,20 +12,15 @@
     <div class="categorias-content">
       <h3 class="categorias-title">Categorías de Ubicaciones</h3>
       <div class="categorias-buttons">
-        <button mat-raised-button
-                color="accent"
-                class="categoria-button categoria-button-all"
-                (click)="verUbicaciones('0')">
-          <mat-icon>map</mat-icon>
-          <span>Ver Todas las Ubicaciones</span>
-        </button>
-        <button *ngFor="let categoria of categorias"
+      
+
+        <button *ngFor="let layer of geojsonLayers"
                 mat-raised-button
-                color="primary"
-                class="categoria-button"
-                (click)="verUbicaciones(categoria.id)">
-          <mat-icon>{{ getIconForCategory(categoria.id) }}</mat-icon>
-          <span>{{ categoria.nombre }}</span>
+                color="warn"
+                class="categoria-button categoria-button-geojson"
+                (click)="irAPruebaGeoJSONConCapa(layer.id)">
+          <img [src]="layer.icon" [alt]="layer.name" class="layer-icon-small">
+          <span>{{ layer.name }}</span>
         </button>
       </div>
     </div>
