--- a/src/app/pages/admin/admin.component.css
+++ b/src/app/pages/admin/admin.component.css
@@ -1,7 +1,8 @@
 .admin-container {
+  margin-top: 76px;
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  height: 85vh;
   background: #f5f7fa;
 }
 
